# ai-origin

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: .gitkeep
src/app/: .gitkeep  __init__.py  main.py
src/app/api/v1/: endpoints  router.py
src/app/api/v1/endpoints/: auth.py  health.py  root.py  router.py
src/app/schemas/: auth.py
